# agentbook

./: .dockerignore  .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  update.sh
.cargo/: audit.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
agent/: package-lock.json  package.json
agent/scripts/: pi-terminal-agent.mjs  (+1 more)
crates/agentbook/: Cargo.toml
crates/agentbook-agent/: Cargo.toml
crates/agentbook-agent/src/: main.rs
crates/agentbook-cli/: Cargo.toml
crates/agentbook-cli/src/: login.rs  main.rs  service.rs  setup.rs  update.rs
crates/agentbook-crypto/: Cargo.toml
crates/agentbook-crypto/src/: crypto.rs  lib.rs  rate_limit.rs  recovery.rs  time.rs  username.rs
crates/agentbook-host/: Cargo.toml
crates/agentbook-host/benches/: router_bench.rs
crates/agentbook-host/src/: main.rs  rate_limit.rs  router.rs  service.rs
crates/agentbook-mesh/: Cargo.toml
crates/agentbook-mesh/src/: crypto.rs  follow.rs  identity.rs  inbox.rs  ingress.rs  invite.rs  lib.rs  rate_limit.rs  recovery.rs  state_dir.rs  transport.rs
crates/agentbook-node/: Cargo.toml
crates/agentbook-node/src/: handler.rs  main.rs  socket.rs
crates/agentbook-node/src/handler/: messaging.rs  mod.rs  rooms.rs  social.rs  tests.rs  username_cache.rs  wallet.rs
crates/agentbook-tests/: Cargo.toml
crates/agentbook-tests/src/: lib.rs
crates/agentbook-tests/src/harness/: client.rs  mod.rs  node.rs  relay.rs
crates/agentbook-tests/tests/: dm_flow.rs  feed_flow.rs  follow_flow.rs  room_flow.rs  username_flow.rs
crates/agentbook-tui/: Cargo.toml
crates/agentbook-tui/src/: agent.rs  agent_config.rs  app.rs  automation.rs  input.rs  main.rs  sound.rs  terminal.rs  ui.rs
crates/agentbook-wallet/: Cargo.toml
crates/agentbook-wallet/src/: contract.rs  lib.rs  onepassword.rs  spending_limit.rs  totp.rs  wallet.rs  yolo.rs
crates/agentbook/src/: agent_protocol.rs  client.rs  gateway.rs  lib.rs  protocol.rs
crates/libtmax/: Cargo.toml
crates/libtmax/src/: broker.rs  error.rs  handler.rs  lib.rs  output.rs  session.rs  vt_state.rs
crates/libtmax/tests/: sandbox_integration.rs
crates/tmax-agent-sdk/: Cargo.toml
crates/tmax-agent-sdk/src/: lib.rs
crates/tmax-agent-sdk/tests/: integration.rs
crates/tmax-cli/: Cargo.toml
crates/tmax-cli/src/: client.rs  commands.rs  main.rs
crates/tmax-cli/tests/: integration.rs
crates/tmax-client/: Cargo.toml
crates/tmax-client/src/: connection.rs  event_loop.rs  keybindings.rs  layout.rs  main.rs  renderer.rs  status_bar.rs  terminal.rs  vt.rs
crates/tmax-client/tests/: integration.rs
crates/tmax-host/: Cargo.toml
crates/tmax-host/src/: main.rs  router.rs
crates/tmax-local/: Cargo.toml
crates/tmax-local/src/: main.rs
crates/tmax-local/tests/: integration.rs
crates/tmax-mesh/: Cargo.toml
crates/tmax-mesh-tests/: Cargo.toml
crates/tmax-mesh-tests/src/: lib.rs
crates/tmax-mesh-tests/tests/: relay_messaging.rs  rendezvous_direct_upgrade.rs  trust_tier_enforcement.rs  two_node_messaging.rs
crates/tmax-mesh/src/: crypto.rs  friends.rs  identity.rs  inbox.rs  ingress.rs  lib.rs  recovery.rs  state_dir.rs  transport.rs
crates/tmax-node/: Cargo.toml
crates/tmax-node-proto/: Cargo.toml  build.rs
crates/tmax-node-proto/proto/: tmax_node.proto
crates/tmax-node-proto/src/: lib.rs
crates/tmax-node/src/: main.rs
crates/tmax-protocol/: Cargo.toml
crates/tmax-protocol/src/: lib.rs  paths.rs
crates/tmax-sandbox/: Cargo.toml
crates/tmax-sandbox-runner/: Cargo.toml
crates/tmax-sandbox-runner/src/: main.rs
crates/tmax-sandbox-runner/tests/: linux_isolation.rs
crates/tmax-sandbox/src/: error.rs  lib.rs  linux.rs  macos.rs
crates/tmax-server/: Cargo.toml
crates/tmax-server/src/: config.rs  connection.rs  main.rs  server.rs
crates/tmax-web/: Cargo.toml
crates/tmax-web/src/: api.rs  client.rs  main.rs  ws.rs  ws_protocol.rs
crates/tmax-web/tests/: integration.rs  ws_integration.rs
e2e-test/: index.html
scripts/: deploy-linux.sh  disk-hygiene.sh  package-release.sh  rollback-linux.sh
todos/: 001-complete-p1-blocking-pty-read-on-tokio-runtime.md  001-pending-p1-implement-e2e-encryption.md  002-complete-p1-sendinput-does-not-verify-edit-mode.md  002-pending-p1-enable-ingress-validation.md  003-complete-p1-pid-file-toctou-and-negative-pid.md  003-pending-p1-verify-relay-registration-signatures.md  004-pending-p1-add-ci-pipeline.md  004-pending-p2-global-mutex-contention.md  005-complete-p2-unix-socket-permissions.md  005-pending-p2-fix-relay-mutex-bottleneck.md  006-complete-p2-child-exit-code-not-captured.md  006-pending-p2-add-totp-replay-and-rate-limiting.md  007-pending-p2-data-cloning-on-hot-path.md  007-pending-p2-fix-unbounded-inbox-growth.md  008-complete-p2-replace-custom-base64.md  008-pending-p2-parallelize-feed-posting.md  009-complete-p2-unsubscribe-does-not-cancel-task.md  009-pending-p2-split-handler-deduplicate-wallet.md  010-complete-p2-graceful-shutdown.md  010-pending-p2-add-handler-integration-tests.md  011-pending-p2-add-yolo-wallet-spending-limits.md  011-pending-p2-session-manager-god-object.md  012-complete-p3-remove-dead-code-and-unused-deps.md  012-pending-p2-fix-agent-approval-flow.md  013-complete-p3-deduplicate-socket-and-pid-path-logic.md  013-pending-p2-zeroize-key-material.md  014-complete-p3-deduplicate-cli-error-handling.md  014-pending-p2-cache-grpc-clients.md  015-pending-p3-consolidate-duplicated-code.md  015-pending-p3-resource-limits.md  016-pending-p3-remove-dead-code.md  016-pending-p3-untyped-response-data.md  017-complete-p3-error-mapping-and-consistency.md  017-pending-p3-fix-memory-leaks.md  018-complete-p1-seatbelt-profile-injection.md  018-pending-p3-improve-type-safety.md  019-complete-p1-overly-permissive-sandbox-profile.md  019-pending-p3-add-tls-for-relay.md  020-complete-p1-html-injection-in-callback-response.md  020-complete-p2-narrow-dev-write-access.md  (+70 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+60 files in other folders)
