[workspace]
resolver = "2"
members = [
    "crates/tmax-protocol",
    "crates/libtmax",
    "crates/tmax-server",
    "crates/tmax-cli",
    "crates/tmax-web",
    "crates/tmax-sandbox",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tmax-protocol = { path = "crates/tmax-protocol" }
libtmax = { path = "crates/libtmax" }
tmax-sandbox = { path = "crates/tmax-sandbox" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
