[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal", "io-util", "io-std", "process", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
nix = { version = "0.30", features = ["signal", "process", "user"] }
regex = "1"
vte = "0.15"
git2 = "0.20"
memmap2 = "0.9"
assert_cmd = "2"
tempfile = "3"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
sha3 = "0.10"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"
async-stream = "0.3"
protoc-bin-vendored = "3.2"
