[package]
name = "agentbook-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentbook-agent"
path = "src/main.rs"

[dependencies]
agentbook = { path = "../agentbook" }
agentbook-crypto = { path = "../agentbook-crypto" }
agentbook-mesh = { path = "../agentbook-mesh" }
agentbook-wallet = { path = "../agentbook-wallet" }
anyhow.workspace = true
base64 = { version = "0.22", features = ["alloc"] }
clap.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
