[package]
name = "agentbook-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentbook"
path = "src/main.rs"

[dependencies]
agentbook = { path = "../agentbook" }
agentbook-wallet = { path = "../agentbook-wallet" }
anyhow.workspace = true
clap.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
