[package]
name = "agentbook-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentbook-cli"
path = "src/main.rs"

[dependencies]
agentbook = { path = "../agentbook" }
agentbook-crypto = { path = "../agentbook-crypto" }
agentbook-mesh = { path = "../agentbook-mesh" }
agentbook-proto = { path = "../agentbook-proto" }
agentbook-wallet = { path = "../agentbook-wallet" }
anyhow.workspace = true
bip39 = "2"
clap.workspace = true
libc.workspace = true
qr2term.workspace = true
rand.workspace = true
reqwest.workspace = true
rpassword.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
tempfile.workspace = true
