[package]
name = "agentbook-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
k256.workspace = true
rand.workspace = true
sha2.workspace = true
sha3.workspace = true

[dev-dependencies]
tempfile.workspace = true
