[package]
name = "agentbook-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
bip39 = "2"
chacha20poly1305.workspace = true
hex.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true

[dev-dependencies]
tempfile.workspace = true
