[package]
name = "agentbook-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentbook-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
agentbook-proto = { path = "../agentbook-proto" }

[dev-dependencies]
tempfile.workspace = true

[[bench]]
name = "router_bench"
harness = false
