[package]
name = "agentbook-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agentbook_host"
path = "src/lib.rs"

[[bin]]
name = "agentbook-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
agentbook-crypto = { path = "../agentbook-crypto" }
agentbook-proto = { path = "../agentbook-proto" }
uuid.workspace = true

[dev-dependencies]
base64.workspace = true
k256.workspace = true
rand.workspace = true
tempfile.workspace = true

[[bench]]
name = "router_bench"
harness = false
