[package]
name = "agentbook-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
agentbook-crypto = { path = "../agentbook-crypto" }
agentbook-proto = { path = "../agentbook-proto" }
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
