[package]
name = "agentbook-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentbook-node"
path = "src/main.rs"

[dependencies]
agentbook = { path = "../agentbook" }
agentbook-mesh = { path = "../agentbook-mesh" }
agentbook-proto = { path = "../agentbook-proto" }
agentbook-wallet = { path = "../agentbook-wallet" }
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
