[package]
name = "agentbook-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

# This crate only contains integration test helpers.
[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
