[package]
name = "agentbook-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agentbook_tests"
path = "src/lib.rs"

[dependencies]
agentbook = { path = "../agentbook" }
agentbook-crypto = { path = "../agentbook-crypto" }
agentbook-host = { path = "../agentbook-host" }
agentbook-mesh = { path = "../agentbook-mesh" }
agentbook-node = { path = "../agentbook-node" }
agentbook-wallet = { path = "../agentbook-wallet" }
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
