[package]
name = "agentbook-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentbook-tui"
path = "src/main.rs"

[dependencies]
agentbook = { path = "../agentbook" }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
