[package]
name = "agentbook-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentbook-crypto = { path = "../agentbook-crypto" }
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
k256.workspace = true
qr2term.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
totp-rs.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
