[package]
name = "agentbook"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = { version = "0.22", features = ["alloc"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
libc.workspace = true
zeroize.workspace = true
