[package]
name = "libtmax"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
vte.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
sha2.workspace = true
k256.workspace = true
sha3.workspace = true
tmax-crypto = { path = "../tmax-crypto" }
tmax-protocol = { path = "../tmax-protocol" }
tmax-sandbox = { path = "../tmax-sandbox" }
tmax-git = { path = "../tmax-git" }

[dev-dependencies]
anyhow.workspace = true
git2.workspace = true
tempfile.workspace = true
tokio.workspace = true
