[package]
name = "tmax-agent-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tmax-protocol = { path = "../tmax-protocol" }

[dev-dependencies]
tempfile.workspace = true
