[package]
name = "tmax-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool for tmax terminal multiplexer"

[[bin]]
name = "tmax"
path = "src/main.rs"

[dependencies]
tmax-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
