[package]
name = "tmax-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tmax"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
nix.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
base64.workspace = true
tmax-protocol = { path = "../tmax-protocol" }
tmax-git = { path = "../tmax-git" }
tmax-agent-sdk = { path = "../tmax-agent-sdk" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
