[package]
name = "tmax-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
crossterm = "0.29"
futures-util.workspace = true
nix.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
vte.workspace = true
regex.workspace = true
tmax-protocol = { path = "../tmax-protocol" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
