[package]
name = "tmax-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
base64.workspace = true
libtmax = { path = "../libtmax" }
tmax-protocol = { path = "../tmax-protocol" }

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
