[package]
name = "tmax-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tmax-crypto = { path = "../tmax-crypto" }
tmax-mesh-proto = { path = "../tmax-mesh-proto" }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
