[package]
name = "tmax-node-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true
