[package]
name = "tmax-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared protocol types for tmax terminal multiplexer"

[dependencies]
base64 = "0.22"
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
