[package]
name = "tmax-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Daemon server for tmax terminal multiplexer"

[dependencies]
tmax-protocol = { workspace = true }
libtmax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
toml = "0.8"
anyhow = "1"
portable-pty = "0.9.0"
