[package]
name = "tmax-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket bridge for tmax terminal multiplexer"

[dependencies]
tmax-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
uuid = { workspace = true }
base64 = "0.22"
