[package]
name = "tmax-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
anyhow.workspace = true
base64.workspace = true
futures-util.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
tmax-protocol = { path = "../tmax-protocol" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
tokio-tungstenite = "0.24"
